--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^9.0.0",
+    "@grpc/grpc-js": "^1.9.2",
+    "@grpc/proto-loader": "^0.7.9",
+    "@nestjs/common": "^10.2.5",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/microservices": "^10.2.5",
     "@nestjs/platform-express": "^9.0.0",
     "@prisma/client": "^5.2.0",
     "reflect-metadata": "^0.1.13",
