--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "@nestjs/platform-express": "^9.0.0",
     "@prisma/client": "^5.2.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "ts-proto": "^1.157.0",
+    "ts-protoc-gen": "^0.15.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
