--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,7 @@ POSTGRES_HOST="YOUR_POSTGRES_HOST"
 POSTGRES_PORT="YOUR_POSTGRES_PORT"
 POSTGRES_DATABASE="YOUR_POSTGRES_DATABASE"
 DATABASE_URL="YOUR_DATABASE_URL"
+
+JWT_ACCESS_SECRET="YOUR_JWT_ACCESS_SECRET"
+JWT_REFRESH_SECRET="YOUR_JWT_REFRESH_SECRET"
+TOKEN_ISSUER="YOUR_TOKEN_ISSUER"
