--- a/package.json
+++ b/package.json
@@ -23,10 +23,19 @@
     "@grpc/grpc-js": "^1.9.2",
     "@grpc/proto-loader": "^0.7.9",
     "@nestjs/common": "^10.2.5",
+    "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/jwt": "^10.1.1",
     "@nestjs/microservices": "^10.2.5",
+    "@nestjs/passport": "^10.0.2",
     "@nestjs/platform-express": "^9.0.0",
     "@prisma/client": "^5.2.0",
+    "@types/bcrypt": "^5.0.0",
+    "@types/passport-jwt": "^3.0.9",
+    "bcrypt": "^5.1.1",
+    "nestjs-grpc-exceptions": "^0.2.1",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
     "ts-proto": "^1.157.0",
