--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,7 +4,7 @@ on:
     branches: ['*']
 
 jobs:
-  test:
+  build:
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -28,5 +28,10 @@ jobs:
       - name: Lint code
         run: yarn lint
 
+      - name: Build code
+        run: yarn build
+        
       - name: Run tests
         run: yarn test
+
+      
