--- a/package.json
+++ b/package.json
@@ -34,12 +34,15 @@
     "@types/bcrypt": "^5.0.0",
     "@types/passport-jwt": "^3.0.9",
     "bcrypt": "^5.1.1",
+    "grpc_tools_node_protoc_ts": "^5.3.3",
     "nestjs-grpc-exceptions": "^0.2.1",
+    "nestjs-proto-gen-ts": "^1.0.21",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
+    "protoc-gen-ts": "^0.8.6",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
-    "ts-proto": "^1.157.0",
+    "ts-proto": "^1.157.1",
     "ts-protoc-gen": "^0.15.0"
   },
   "devDependencies": {
@@ -55,6 +58,7 @@
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "grpc-tools": "^1.12.4",
     "jest": "29.3.1",
     "prettier": "^2.3.2",
     "prisma": "^5.2.0",
