--- a/package.json
+++ b/package.json
@@ -37,12 +37,13 @@
     "grpc_tools_node_protoc_ts": "^5.3.3",
     "nestjs-grpc-exceptions": "^0.2.1",
     "nestjs-proto-gen-ts": "^1.0.21",
+    "nodemailer": "^6.9.5",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "protoc-gen-ts": "^0.8.6",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
-    "ts-proto": "^1.157.0",
+    "ts-proto": "^1.160.0",
     "ts-protoc-gen": "^0.15.0",
     "uuid": "^9.0.1"
   },
@@ -53,6 +54,7 @@
     "@types/express": "^4.17.13",
     "@types/jest": "29.2.4",
     "@types/node": "18.11.18",
+    "@types/nodemailer": "^6.4.11",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
