--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,6 @@ DATABASE_URL="YOUR_DATABASE_URL"
 JWT_ACCESS_SECRET="YOUR_JWT_ACCESS_SECRET"
 JWT_REFRESH_SECRET="YOUR_JWT_REFRESH_SECRET"
 TOKEN_ISSUER="YOUR_TOKEN_ISSUER"
+
+EMAIL_USERNAME="YOUR_EMAIL"
+EMAIL_PASSWORD="YOUR_EMAIL_PASSWORD"
