--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,5 @@ TOKEN_ISSUER="YOUR_TOKEN_ISSUER"
 
 EMAIL_USERNAME="YOUR_EMAIL"
 EMAIL_PASSWORD="YOUR_EMAIL_PASSWORD"
+
+AUTH_GRPC_PORT="YOUR_AUTH_GRPC_PORT"
