--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "@prisma/client": "^5.3.1",
     "@types/bcrypt": "^5.0.0",
     "@types/passport-jwt": "^3.0.9",
+    "amqp-connection-manager": "^4.1.14",
+    "amqplib": "^0.10.3",
     "bcrypt": "^5.1.1",
     "grpc_tools_node_protoc_ts": "^5.3.3",
     "nestjs-grpc-exceptions": "^0.2.1",
