--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,5 @@ EMAIL_USERNAME="YOUR_EMAIL"
 EMAIL_PASSWORD="YOUR_EMAIL_PASSWORD"
 
 AUTH_GRPC_PORT="YOUR_AUTH_GRPC_PORT"
+USER_GRPC_PORT="YOUR_USER_GRPC_PORT"
+USER_REST_PORT="YOUT_USER_REST_PORT"
