init file module

--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,5 @@ EMAIL_PASSWORD="YOUR_EMAIL_PASSWORD"
 AUTH_GRPC_PORT="YOUR_AUTH_GRPC_PORT"
 USER_GRPC_PORT="YOUR_USER_GRPC_PORT"
 USER_REST_PORT="YOUT_USER_REST_PORT"
+
+FILE_GRPC_URL="YOUR_FILE_GRPC_URL"
