--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -1,10 +1,15 @@
-name: ci
+name: Run unit test
 on:
+  push:
+    branches:
+      - dev
+      - main
   pull_request:
-    branches: ['*']
-
+    branches: 
+      - dev
+      - main
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
     strategy:
       matrix:
