--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,5 @@ USER_GRPC_PORT="YOUR_USER_GRPC_PORT"
 USER_REST_PORT="YOUT_USER_REST_PORT"
 
 FILE_GRPC_URL="YOUR_FILE_GRPC_URL"
+EMAIL_SERVICE_RMQ="YOUR_EMAIL_SERVICE_RMQ"
+EMAIL_QUEUE="YOUR_EMAIL_QUEUE"
